--- a/DS/数据结构/btree/btree/btree.vcxproj
+++ b/DS/数据结构/btree/btree/btree.vcxproj
@@ -124,6 +124,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="heap.c" />
+    <ClCompile Include="heap1.c" />
+    <ClCompile Include="test.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
