--- a/DS/数据结构/btree/btree/btree.vcxproj
+++ b/DS/数据结构/btree/btree/btree.vcxproj
@@ -123,6 +123,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="betree.c" />
+    <ClCompile Include="btree1.c" />
     <ClCompile Include="heap.c" />
     <ClCompile Include="heap1.c" />
     <ClCompile Include="test.c" />
