--- a/DS/数据结构/btree/btree/btree.vcxproj.filters
+++ b/DS/数据结构/btree/btree/btree.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="test.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="betree.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="btree1.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
